oc/deployment-config.yaml
kind: "DeploymentConfig"
apiVersion: "v1"
metadata:
  name: "pipedream"
spec:
  template: 
    metadata:
      labels:
        name: "pipedream"
    spec:
      containers:
        - name: "pipedream"
          image: "pipedream:latest"
          ports:
            - containerPort: 8000
              protocol: "TCP"
  replicas: 2
  selector:
    name: "pipedream"
  triggers:
    - type: "ConfigChange" 
    - type: "ImageChange" 
      imageChangeParams:
        automatic: true
        containerNames:
          - "pipedream"
        from:
          kind: "ImageStreamTag"
          name: "pipedream:latest"
  strategy: 
    type: "Rolling"
