oc/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pipedream   
spec:
  selector:                  
    name: pipedream
  ports:
  - nodePort: 0
    port: 8000               
    protocol: TCP
    targetPort: 8000
