oc/route.yaml
apiVersion: v1
kind: Route
metadata:
  name: pipedream
spec:
  host: localhost
  to:
    kind: Service
    name: pipedream
